plugins {
    id 'java-library'
}

group = 'com.jinloes.prpilot'
version = '1.0.0'

repositories {
    mavenCentral()
}

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

compileJava {
    options.encoding = 'UTF-8'
}

dependencies {
    // core: shared review request/result/PR models (plain Java 17 module, no Kotlin).
    api project(':core')

    implementation 'com.github:copilot-sdk-java:1.0.6'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.1'
    implementation 'org.apache.commons:commons-lang3:3.18.0'
    implementation 'commons-io:commons-io:2.16.1'
    implementation 'org.slf4j:slf4j-api:2.0.13'

    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.2'
    testImplementation 'org.assertj:assertj-core:3.27.7'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
    useJUnitPlatform()
}

